--- a/pom.xml
+++ b/pom.xml
@@ -22,15 +22,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-boot-devtools.version>2.1.2</spring-boot-devtools.version>
-        <spring-session-core.version>2.1.2</spring-session-core.version>
-        <spring-boot-admin-starter-server.version>1.2.0</spring-boot-admin-starter-server.version>
-        <spring-boot-admin-starter-client.version>1.2.0</spring-boot-admin-starter-client.version>
-        <spring-boot-starter-web-services.version>2.1.1</spring-boot-starter-web-services.version>
-        <spring-boot-starter-web.version>2.1.1</spring-boot-starter-web.version>
-        <spring-boot-starter-thymeleaf.version>2.1.1</spring-boot-starter-thymeleaf.version>
+        <spring-boot-devtools.version>2.1.1.RELEASE</spring-boot-devtools.version>
+        <spring-session-core.version>2.1.1.RELEASE</spring-session-core.version>
+        <spring-boot-admin-starter-server.version>2.1.1</spring-boot-admin-starter-server.version>
+        <spring-boot-admin-starter-client.version>2.1.1</spring-boot-admin-starter-client.version>
+        <spring-boot-starter-web-services.version>2.1.1.RELEASE</spring-boot-starter-web-services.version>
+        <spring-boot-starter-web.version>2.1.1.RELEASE</spring-boot-starter-web.version>
+        <spring-boot-starter-thymeleaf.version>2.1.1.RELEASE</spring-boot-starter-thymeleaf.version>
         <spring-boot-admin.version>2.1.1</spring-boot-admin.version>
         <postgresql.version>42.2.5</postgresql.version>
+        <spring-boot-maven-plugin.version>2.1.1.RELEASE</spring-boot-maven-plugin.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <start-class>com.walterwhites.library.LibraryApplication</start-class>
     </properties>
 
     <modules>
@@ -100,6 +104,23 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web-services</artifactId>
+                <version>${spring-boot-starter-web-services.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${spring-boot-maven-plugin.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
