--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,14 @@
         <spring-boot-starter-web.version>2.1.1.RELEASE</spring-boot-starter-web.version>
         <spring-boot-starter-thymeleaf.version>2.1.1.RELEASE</spring-boot-starter-thymeleaf.version>
         <spring-boot-admin.version>2.1.1</spring-boot-admin.version>
+        <spring-boot-starter-test.version>2.1.1.RELEASE</spring-boot-starter-test.version>
         <postgresql.version>42.2.5</postgresql.version>
-        <spring-boot-maven-plugin.version>2.1.1.RELEASE</spring-boot-maven-plugin.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <start-class>com.walterwhites.library.LibraryApplication</start-class>
+        <junit.version>4.12</junit.version>
+        <spring-boot-test.version>2.1.1.RELEASE</spring-boot-test.version>
+        <spring-boot-tomcat.version>2.1.1.RELEASE</spring-boot-tomcat.version>
+        <spring-test.version>5.1.3.RELEASE</spring-test.version>
     </properties>
 
     <modules>
@@ -106,21 +109,35 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-web-services</artifactId>
-                <version>${spring-boot-starter-web-services.version}</version>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring-boot-starter-test.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-test</artifactId>
+                <version>${spring-boot-test.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring-test.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-tomcat</artifactId>
+                <scope>provided</scope>
+                <version>${spring-boot-tomcat.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>${spring-boot-maven-plugin.version}</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
 </project>
