--- a/batch/pom.xml
+++ b/batch/pom.xml
@@ -32,6 +32,11 @@
             <version>2.1.0.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <!--The identifier of the parent POM-->
