--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -6,13 +6,15 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.application.name=Library
-spring.datasource.url=jdbc:postgres://foyvriec:G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu@pellefant.db.elephantsql.com:5432/foyvriec
+spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}
+spring.datasource.databaseName=foyvriec
 spring.datasource.username=foyvriec
-spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi
+spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
+spring.datasource.driverClassName=org.postgresql.Driver
 
 # Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
