--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.thymeleaf.cache=false
 welcome.message=Hello Thymeleaf
 error.message=There have an error, Sorry my friend !
 server.port=8081
+logging.level.org.hibernate.SQL=DEBUG
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
@@ -11,6 +12,7 @@ spring.datasource.databaseName=foyvriec
 spring.datasource.username=foyvriec
 spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
 spring.datasource.driverClassName=org.postgresql.Driver
+
 
 # Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
