--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>com.walterwhites.library</groupId>
             <artifactId>webservice</artifactId>
-            <version>${project.version}</version>
+            <version>${project d.version}</version>
         </dependency>
         <dependency>
             <groupId>com.walterwhites.library</groupId>
