--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 applications:
-  - name: webapp
-    memory: 768M
+  - name: webapp-231122
+    memory: 2GB
+    disk_quota: 2GB
     instances: 1
     space: development
-    route: webapp-library.cfapps.io
