--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <postgresql.version>42.2.5</postgresql.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <spring-boot-maven-plugin.version>2.1.1.RELEASE</spring-boot-maven-plugin.version>
     </properties>
 
     <modules>
@@ -38,4 +39,17 @@
         <module>webservice</module>
         <module>batch</module>
     </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.walterwhites.library.webapp.LibraryApplication</mainClass>
+                </configuration>
+                <version>${spring-boot-maven-plugin.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
