--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -40,12 +40,6 @@
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>de.codecentric</groupId>
-            <artifactId>spring-boot-admin-dependencies</artifactId>
-            <version>${spring-boot-admin.version}</version>
-            <type>pom</type>
-        </dependency>
         
         <!-- modules dependencies -->
         <dependency>
@@ -56,11 +50,17 @@
         <dependency>
             <groupId>com.walterwhites.library</groupId>
             <artifactId>webservice</artifactId>
+            <type>war</type>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.walterwhites.library</groupId>
             <artifactId>model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.walterwhites.library</groupId>
+            <artifactId>consumer</artifactId>
             <version>${project.version}</version>
         </dependency>
 
@@ -70,20 +70,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/junit/junit -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test</artifactId>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
         </dependency>
 
         <dependency>
@@ -109,17 +99,4 @@
             <version>${spring-boot-admin-starter-server.version}</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>com.walterwhites.library.webapp.LibraryApplication</mainClass>
-                </configuration>
-                <version>${spring-boot-maven-plugin.version}</version>
-            </plugin>
-        </plugins>
-    </build>
 </project>
