--- a/model/pom.xml
+++ b/model/pom.xml
@@ -28,6 +28,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.2.5</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
