--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     </parent>
 
     <properties>
+        <project.version>0.0.1-SNAPSHOT</project.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
@@ -39,17 +40,4 @@
         <module>webservice</module>
         <module>batch</module>
     </modules>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>com.walterwhites.library.webapp.LibraryApplication</mainClass>
-                </configuration>
-                <version>${spring-boot-maven-plugin.version}</version>
-            </plugin>
-        </plugins>
-    </build>
 </project>
