--- a/batch/src/main/resources/application.properties
+++ b/batch/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.batch.initialize-schema=always
