--- a/model/pom.xml
+++ b/model/pom.xml
@@ -43,5 +43,9 @@
             <version>5.1.3.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 </project>
