--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,25 +1,13 @@
 spring.thymeleaf.cache=false
 welcome.message=Hello Thymeleaf
 error.message=There have an error, Sorry my friend !
-server.port=8081
-logging.level.org.hibernate.SQL=DEBUG
+server.port=8080
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.application.name=Library
-spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}
-spring.datasource.databaseName=foyvriec
-spring.datasource.username=foyvriec
-spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
-spring.datasource.driverClassName=org.postgresql.Driver
 
-
-# Hibernate properties
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 debug=false
 trace=false
-logging.file = webapps.log
+logging.file = webapp.log
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
