--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -66,6 +66,14 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.walterwhites.library.webservice.WebserviceApplication</mainClass>
+                </configuration>
+                <version>${spring-boot-maven-plugin.version}</version>
+            </plugin>
         </plugins>
     </build>
 </project>
