--- a/webservice/src/main/resources/application.properties
+++ b/webservice/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.application.name=Library
 spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}
 spring.datasource.databaseName=foyvriec
-spring.datasource.username=foyvriec
+spring.datasource.username=aftwyozh
 spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
 spring.datasource.driverClassName=org.postgresql.Driver
 
@@ -14,6 +14,6 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-debug=true
-trace=true
+debug=false
+trace=false
 logging.file = webservice.log
