--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -25,17 +25,30 @@
         <!-- modules dependencies -->
         <dependency>
             <groupId>com.walterwhites.library</groupId>
-            <artifactId>business</artifactId>
+            <artifactId>consumer</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.walterwhites.library</groupId>
-            <artifactId>consumer</artifactId>
+            <artifactId>model</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>wsdl4j</groupId>
             <artifactId>wsdl4j</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0-b170201.1204</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.activation/activation -->
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1</version>
         </dependency>
     </dependencies>
 
