import static css && js

--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.thymeleaf.cache=false
-welcome.message=Hello Thymeleaf
+application.name=Library
+application.author=Walterwhites
 error.message=There have an error, Sorry my friend !
 server.port=8080
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.application.name=Library
-
+spring.resources.static-locations=classpath:/static
 debug=false
 trace=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
