--- a/batch/pom.xml
+++ b/batch/pom.xml
@@ -36,6 +36,8 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <!-- modules dependencies -->
         <dependency>
             <groupId>com.walterwhites.library</groupId>
             <artifactId>consumer</artifactId>
