--- a/webservice/src/main/resources/application.properties
+++ b/webservice/src/main/resources/application.properties
@@ -6,13 +6,12 @@ spring.datasource.databaseName=foyvriec
 spring.datasource.username=foyvriec
 spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
 spring.datasource.driverClassName=org.postgresql.Driver
-
-
 # Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.main.allow-bean-definition-overriding=true
 debug=false
 trace=false
