--- a/webapp/src/test/resources/application.properties
+++ b/webapp/src/test/resources/application.properties
@@ -1,12 +1,31 @@
+#application
+server.port=8080
 application.name=Library
 application.author=Walterwhites
 error.message=There have an error, Sorry my friend !
 
+# thymeleaf
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.resources.static-locations=classpath:/static
+spring.thymeleaf.cache=false
+
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-# Datasource
 spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+# Hibernate properties
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+debug=false
+trace=false
