--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -33,6 +33,13 @@
             <version>2.3.0-b170127.1453</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+            <version>1.4.194</version>
+        </dependency>
+
         <!-- modules dependencies -->
         <dependency>
             <groupId>com.walterwhites.library</groupId>
