--- a/webservice/src/main/resources/application.properties
+++ b/webservice/src/main/resources/application.properties
@@ -1,11 +1,14 @@
+#application
 server.port=8081
-logging.level.org.hibernate.SQL=DEBUG
-spring.application.name=Library
+application.name=Library
+
+# postgresql
 spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}
 spring.datasource.databaseName=foyvriec
 spring.datasource.username=foyvriec
 spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
 spring.datasource.driverClassName=org.postgresql.Driver
+
 # Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.show-sql=false
@@ -13,5 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.main.allow-bean-definition-overriding=true
+logging.level.org.hibernate.SQL=DEBUG
+
 debug=false
 trace=false
