working on error TooMany Connection ElephantSQL

--- a/webapp/src/test/resources/application.properties
+++ b/webapp/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 #application
 server.port=8080
-application.name=Library
+spring.application.name=Library
 application.author=Walterwhites
 error.message=There have an error, Sorry my friend !
 
