--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #application
 server.port=8080
-application.name=Library
+spring.application.name=Library
 application.author=Walterwhites
 error.message=There have an error, Sorry my friend !
 
@@ -12,21 +12,20 @@ spring.resources.static-locations=classpath:/static
 spring.thymeleaf.cache=false
 
 # postgresql
-# spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}
-# spring.datasource.databaseName=foyvriec
-# spring.datasource.username=foyvriec
-# spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
-# spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}
+spring.datasource.databaseName=foyvriec
+spring.datasource.username=foyvriec
+spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
+spring.datasource.driverClassName=org.postgresql.Driver
 
 # Hibernate properties
-# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
-# spring.jpa.show-sql=false
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.properties.hibernate.format_sql=true
-# spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-# logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+logging.level.org.hibernate.SQL=DEBUG
 
 spring.main.allow-bean-definition-overriding=true
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration, org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
 debug=false
 trace=false
