update README && fix error on BookEndPoint of webservice related to repository

--- a/batch/src/main/resources/application.properties
+++ b/batch/src/main/resources/application.properties
@@ -1,10 +1,17 @@
-server.port=8081
+server.port=8082
 logging.level.org.hibernate.SQL=DEBUG
 spring.application.name=Library
-spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}
-spring.datasource.databaseName=foyvriec
-spring.datasource.username=foyvriec
-spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
+
+# postgresql
+# elephant sql
+# spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}&ApplicationName=webapp
+# spring.datasource.databaseName=foyvriec
+# spring.datasource.username=foyvriec
+# spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
+spring.datasource.url=jdbc:postgresql://localhost/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}&ApplicationName=webapp
+spring.datasource.databaseName=library
+spring.datasource.username=flo
+spring.datasource.password=9djFFD432d834759UTUYEZ
 spring.datasource.driverClassName=org.postgresql.Driver
 
 
