--- a/webservice/src/main/resources/application.properties
+++ b/webservice/src/main/resources/application.properties
@@ -2,10 +2,15 @@
 server.port=8081
 
 # postgresql
-spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}
-spring.datasource.databaseName=foyvriec
-spring.datasource.username=foyvriec
-spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
+# elephant sql
+# spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}&ApplicationName=webservice
+# spring.datasource.databaseName=foyvriec
+# spring.datasource.username=foyvriec
+# spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
+spring.datasource.url=jdbc:postgresql://localhost/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}&ApplicationName=webservice
+spring.datasource.databaseName=library
+spring.datasource.username=flo
+spring.datasource.password=9djFFD432d834759UTUYEZ
 spring.datasource.driverClassName=org.postgresql.Driver
 
 # Hibernate properties
@@ -17,5 +22,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.main.allow-bean-definition-overriding=true
 logging.level.org.hibernate.SQL=DEBUG
 
-debug=false
-trace=false
+#debug=true
+#trace=true
+#logging.file=debug-webservice
