--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -12,10 +12,15 @@ spring.resources.static-locations=classpath:/static
 spring.thymeleaf.cache=false
 
 # postgresql
-spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}
-spring.datasource.databaseName=foyvriec
-spring.datasource.username=foyvriec
-spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
+# elephant sql
+# spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}&ApplicationName=webapp
+# spring.datasource.databaseName=foyvriec
+# spring.datasource.username=foyvriec
+# spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
+spring.datasource.url=jdbc:postgresql://localhost/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}&ApplicationName=webapp
+spring.datasource.databaseName=library
+spring.datasource.username=flo
+spring.datasource.password=9djFFD432d834759UTUYEZ
 spring.datasource.driverClassName=org.postgresql.Driver
 
 # Hibernate properties
@@ -24,7 +29,6 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-logging.level.org.hibernate.SQL=DEBUG
 
 spring.main.allow-bean-definition-overriding=true
 debug=false
