--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
     <properties>
         <project.version>0.0.1-SNAPSHOT</project.version>
+        <project.version.classes>0.0.1-SNAPSHOT-classes</project.version.classes>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
