--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -89,6 +89,14 @@
                 </configuration>
                 <version>${spring-boot-maven-plugin.version}</version>
             </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <attachClasses>true</attachClasses>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
