--- a/batch_email/src/main/resources/application.properties
+++ b/batch_email/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8082
+server.port=8085
 logging.level.org.hibernate.SQL=DEBUG
 spring.application.name=Library
 
@@ -8,18 +8,12 @@ spring.application.name=Library
 # spring.datasource.databaseName=foyvriec
 # spring.datasource.username=foyvriec
 # spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
-spring.datasource.url=jdbc:postgresql://localhost/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}&ApplicationName=webapp
+spring.datasource.url=jdbc:postgresql://localhost/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}&ApplicationName=batch_email
 spring.datasource.databaseName=library
 spring.datasource.username=flo
 spring.datasource.password=9djFFD432d834759UTUYEZ
 spring.datasource.driverClassName=org.postgresql.Driver
 
-
 # Hibernate properties
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
-spring.jpa.show-sql=false
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.batch.initialize-schema=always
