--- a/business/pom.xml
+++ b/business/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>sentry</artifactId>
             <version>1.7.16</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
