--- a/webservice/src/main/resources/application.properties
+++ b/webservice/src/main/resources/application.properties
@@ -22,6 +22,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.main.allow-bean-definition-overriding=true
 logging.level.org.hibernate.SQL=DEBUG
 
-debug=true
-trace=true
+#debug=true
+#trace=true
 #logging.file=debug-webservice
