--- a/batch_email/src/main/resources/application.properties
+++ b/batch_email/src/main/resources/application.properties
@@ -17,3 +17,15 @@ spring.datasource.driverClassName=org.postgresql.Driver
 # Hibernate properties
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+
+# configuration email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=test9234823842394@gmail.com
+spring.mail.password=lfjqhf2342---
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# active email config classes
+mail.feature.state=true
