batch email cron

--- a/batch_email/src/main/resources/application.properties
+++ b/batch_email/src/main/resources/application.properties
@@ -29,3 +29,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 # active email config classes
 mail.feature.state=true
+
+# configuration of batch
+spring.batch.job.enabled=false
+batch.cron: 0/30 * * * * *
