finish API route to get all soon expired loans  with an interval of 5 days

--- a/batch_remind_expiration/pom.xml
+++ b/batch_remind_expiration/pom.xml
@@ -62,7 +62,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.walterwhites.library.batch_email.Batch</mainClass>
+                    <mainClass>com.walterwhites.library.batch_remind_expiration.Batch</mainClass>
                 </configuration>
                 <version>${spring-boot-maven-plugin.version}</version>
             </plugin>
