send email after return a book if there have one reservation or more on this book

--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -34,5 +34,17 @@ spring.main.allow-bean-definition-overriding=true
 # Session users
 spring.session.timeout=1200
 
+# configuration email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=test9234823842394@gmail.com
+spring.mail.password=lfjqhf2342---
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# active email config classes
+mail.feature.state=true
+
 debug=false
 trace=false
