--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -20,6 +20,10 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <dependency>
@@ -51,6 +55,7 @@
         <dependency>
             <groupId>com.walterwhites.library</groupId>
             <artifactId>business</artifactId>
+            <type>jar</type>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -88,16 +93,6 @@
             <artifactId>spring-boot-admin-dependencies</artifactId>
             <version>${spring-boot-admin.version}</version>
             <type>pom</type>
-        </dependency>
-        <dependency>
-            <groupId>de.codecentric</groupId>
-            <artifactId>spring-boot-admin-starter-client</artifactId>
-            <version>${spring-boot-admin-starter-client.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>de.codecentric</groupId>
-            <artifactId>spring-boot-admin-starter-server</artifactId>
-            <version>${spring-boot-admin-starter-server.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
