--- a/webapp/src/test/resources/application.properties
+++ b/webapp/src/test/resources/application.properties
@@ -27,5 +27,17 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+# configuration email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=test9234823842394@gmail.com
+spring.mail.password=lfjqhf2342---
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# active email config classes
+mail.feature.state=true
+
 debug=false
 trace=false
