--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,2 +1,14 @@
+# postgresql
+# elephant sql
+# spring.datasource.url=jdbc:postgresql://pellefant.db.elephantsql.com:5432/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}&ApplicationName=webservice
+# spring.datasource.databaseName=foyvriec
+# spring.datasource.username=foyvriec
+# spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
+spring.datasource.url=jdbc:postgresql://host.docker.internal/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}&ApplicationName=webservice
+spring.datasource.databaseName=library
+spring.datasource.username=flo
+spring.datasource.password=9djFFD432d834759UTUYEZ
+spring.datasource.driverClassName=org.postgresql.Driver
+
 debug=false
 trace=false
