--- a/webservice/src/main/resources/application.properties
+++ b/webservice/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8081
 # spring.datasource.databaseName=foyvriec
 # spring.datasource.username=foyvriec
 # spring.datasource.password=G1tdBJ7qWfNG5oHJRUWZi-Q0caH1eueu
-spring.datasource.url=jdbc:postgresql://localhost/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}&ApplicationName=webservice
+spring.datasource.url=jdbc:postgresql://host.docker.internal/${spring.datasource.databaseName}?user=${spring.datasource.username}&password=${spring.datasource.password}&ApplicationName=webservice
 spring.datasource.databaseName=library
 spring.datasource.username=flo
 spring.datasource.password=9djFFD432d834759UTUYEZ
